# pygrm

./: CONTRIBUTING.rst  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
pygrm/: cli.py
tests/: test_foo.py
