[tool.poetry]
name = "pygrm"
version = "0.0.1"
description = "This is a git repository manager, written in Python, which allows you to maintain a list of git projects you have on a particular computer in a configuration YAML file."
authors = ["Paul Gierz <fpgierz@mac.com>"]
repository = "https://github.com/pgierz/pygrm"
documentation = "https://pgierz.github.io/pygrm/"
readme = "README.md"
packages = [
  {include = "pygrm"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cerberus = "^1.3.5"
rich = "^13.6.0"
ruamel-yaml = "^0.17.34"
gitpython = "^3.1.37"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["pygrm"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pygrm"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
